<resources>
    <string name="app_name">kanban</string>
    <!-- TODO: Remove or change this placeholder text -->
    <!-- Status Task-->
    <string name="status_task_todo">A Fazer</string>
    <string name="status_task_doing">Fazendo</string>
    <string name="status_task_done">Feita</string>
    <string name="hint_edit_email">Digite seu E-mail</string>
    <string name="hint_edit_password">Digite sua Senha</string>

    <!-- Genericos -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_title_warning">Atenção</string>
    <string name="text_button_warning">Entendi</string>
    <string name="password_empty">Preencha sua Senha!</string>
    <string name="password_text">Senha</string>
    <string name="email_empty">Preencha seu E-mail!</string>
    <string name="email_text">E-mail</string>
    <string name="text_message">Mensagem</string>

    <!-- Login Fragment -->
    <string name="text_title_login_fragment">Login</string>
    <string name="text_button_register_login_fragment">Criar Conta</string>
    <string name="text_button_recover_login_fragment">Recuperar Conta</string>

    <!-- Register Fragment -->
    <string name="email_empty_register_fragment">Preencha um E-mail válido!</string>
    <string name="password_empty_register_fragment">Preencha uma Senha!</string>
    <string name="text_button_register_fragment">Enviar</string>
    <string name="text_title_toolbar_account_fragment">Criar conta</string>

    <!-- Recover Account Fragment -->
    <string name="text_info_recover_account_fragment">Informe seu e-mail de cadastro para receber \n um link para alteração de conta</string>
    <string name="text_title_toolbar_recover_account_fragment">Recuperar Conta</string>
    <string name="text_button_recover_account_fragment">Enviar</string>
    <!-- Form Task Fragment -->
    <string name="description_empty_form_task_fragment">Preencha uma descrição!</string>
    <string name="description_form_task_fragment">Descrição</string>
    <string name="new_task_form_task_fragment">Nova Tarefa</string>
    <string name="status_form_task_fragment">Status</string>
    <string name="save_button_form_task_fragment">Salvar</string>
    <string name="hint_form_task_fragment">Informe sua nova Tarefa</string>

    <!--Hints-->
    <string name="desc_logout">Logout</string>
    <string name="desc_tabs">Tabs</string>
    <string name="desc_addtask">Add Task</string>
</resources>