<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    tools:context=".ui.auth.RecoverAccountFragment">

    <LinearLayout
        android:id="@+id/linearlayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toolbar"
            app:navigationIcon="@drawable/icback"
            android:paddingTop="40dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_title_toolbar_recover_account_fragment"
                android:textColor="@color/white"
                android:layout_gravity="center_horizontal"/>

        </com.google.android.material.appbar.MaterialToolbar>
        <LinearLayout
            android:id="@+id/linearlayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="25dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_info_recover_account_fragment"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:layout_marginTop="24dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_text"
                android:layout_marginTop="24dp"
                android:id="@+id/textviewemail"
                android:textColor="@color/white"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/hint_edit_email"
                android:inputType="textEmailAddress"
                style="@style/EditTextTheme"
                android:id="@+id/edittextemail2"
                android:layout_marginTop="4dp"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@null"
                style="@style/ButtonTheme"
                android:id="@+id/botaoenviar2"
                android:text="@string/text_button_recover_account_fragment"
                app:backgroundTint="@null"
                android:layout_marginTop="16dp"/>

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:indeterminateTint="@color/white"
                android:visibility="invisible"
                tools:visibility="visible"
                android:layout_gravity="center"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>